# qq-shuihu

./: .dockerignore  .gitignore  CLAUDE.md  CROSS_PLATFORM_MIGRATION.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.simple  MIGRATION_SUMMARY.md  README.md  docker-compose.yml  install_requirements.py  installed_packages.txt  pyproject.toml  readMe.md  requirements-linux.txt  requirements-macos.txt  requirements-windows.txt  requirements.txt  test_cross_platform.py  test_project.py  uia.txt  win32.txt  xxx.txt  开发流程.md
examples/: advanced_example.py  basic_example.py
software/: qmacro.ini
src/: __init__.py  automation.py  config.py  game.py  index.py  main.py  task_system.py  window_manager.py
src/config/: 2468659059.json  2548918215.json  3305194332.json  base.json  cache.json
src/coords/: juyi.py  liehun.py  other.py  readme.txt  zhengzhan.py  zudui.py
src/future/: __init__.py  beibao.py  bianqiang.py  fuben.py  futureBase.py  other.py  test.py  zhanzheng.py  zudui.py
src/utils/: __init__.py  api_core.py  automation_engine.py  game.py  hwnd.py  task_manager.py  util.py  window_utils.py
test/: index.py  test_cross_platform.py  test_project.py
