[project]
name = 'qq-shuihu'
version = '0.1.0'
dependencies = [
    # GUI自动化核心库
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    # 图像处理和计算机视觉
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    # 系统和进程管理
    "psutil>=5.9.0",
    # 窗口管理
    "pygetwindow>=0.0.9",
    # 测试框架
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    # 码格式化和检查
    "black>=23.0.0", #代码格式化
    "isort>=5.12.0", # import排序
    "flake8>=6.0.0", # 代码质量检查
    "mypy>=1.0.0",   # 静态类型检查
    # 文档生成
    "sphinx>=7.0.0",           # 文档生成
    "sphinx-rtd-theme>=1.3.0", # 文档主题
    # 性能分析
    "memory-profiler>=0.61.0", # 内存使用分析
    "line-profiler>=4.0.0",    # 代码行性能分析

    # Windows特定依赖
    "pywin32>=306",          # Windows API支持，提供更好的窗口操作
    "pywin32-ctypes>=0.2.2", # Windows COM支持
    "comtypes>=1.2.0",       # Windows COM接口
    "wmi>=1.5.1",            # Windows管理接口
    "pywinauto >=0.6.9",     # Windows GUI自动化
    # Windows Shell操作
    "winshell>=0.6",
]
